Fix for pragma definition on linux and included gomp library which doesn't get linked by default. Re #535

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -235,6 +235,9 @@ else :
 	libList.append('TKMesh')
 	libList.append('TKG2d')
 
+	# OpenMP support library which doesn't get linked by default for some reason
+	libList.append('gomp')
+
 	if int(debug) :
 	    cflags.append(['-g','-O0','-Wall','-fopenmp'])
 	else :
