Changed scons script to check for gomp first before it adds it as a dependency. Note that this only seems to be necessary for building shared libraries and not executables, which get linked automatically. Re #535

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -236,7 +236,12 @@ else :
 	libList.append('TKG2d')
 
 	# OpenMP support library which doesn't get linked by default for some reason
-	libList.append('gomp')
+	# Add the library if it is available on the system
+	conf = Configure(env)
+	if conf.CheckLib('gomp'):
+	   print 'Found OpenMP runtime library, adding to linker list'
+	   libList.append('gomp')
+	conf.Finish()
 
 	if int(debug) :
 	    cflags.append(['-g','-O0','-Wall','-fopenmp'])
