--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -1,3 +1,9 @@
+# not used yet
+%define is_mandrake %(test -e /etc/mandrake-release && echo 1 || echo 0)
+%define is_suse %(test -e /etc/SuSE-release && echo 1 || echo 0)
+%define is_fedora %(test -e /etc/fedora-release && echo 1 || echo 0)
+%define is_rhel %(test -e /etc/redhat-release && echo 1 || echo 0)
+
 Name:		Mantid
 Summary:	Data Analysis For ISIS
 Version:	MANTID_VERSION
