Added the possibility to change the axes on a workspace (replaceAxis method on MatrixWorkspace). This allows changing the 'vertical' axis to a numeric one from a spectraAxis. There are probably still places around that assume it contains spectrum numbers (e.g. LoadNexus)... Re #439.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -213,6 +213,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\IInstrument.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Instrument.cpp"
 				>
 			</File>
