--- a/Code/Mantid/UserAlgorithms/UserAlgorithms.vcproj
+++ b/Code/Mantid/UserAlgorithms/UserAlgorithms.vcproj
@@ -26,8 +26,8 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				CommandLine="copy $(OutDir)\$(SolutionName)$(ProjectName).dll $(SolutionDir)\Bin\Plugins\$(SolutionName)$(ProjectName).dll /Y&#x0D;&#x0A;"
-				Outputs="$(SolutionDir)\debug\Mantid.properties"
+				CommandLine="copy &quot;$(OutDir)\$(SolutionName)$(ProjectName).dll&quot; &quot;$(SolutionDir)\Bin\Plugins\$(SolutionName)$(ProjectName).dll&quot; /Y"
+				Outputs="&quot;$(SolutionDir)\debug\Mantid.properties&quot;"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -100,8 +100,8 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				CommandLine="copy $(SolutionDir)\Properties\*properties $(SolutionDir)\release /Y"
-				Outputs="$(SolutionDir)\release\Mantid.properties"
+				CommandLine="copy &quot;$(SolutionDir)\Properties\*properties&quot; &quot;$(SolutionDir)\release&quot; /Y"
+				Outputs="&quot;$(SolutionDir)\release\Mantid.properties&quot;"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
