Remove the annoying "multiple assignment operator" warning that MSVS gave for WorkspaceProperty. Delete inclusion of Workspace2D header in MantidPlot. Re #100.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -118,6 +118,8 @@
 				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../../Third_Party/include;C:\python25\include"
 				PreprocessorDefinitions="_WIN32;IN_MANTID_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
+				WarningLevel="3"
+				DisableSpecificWarnings="4275"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
