--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -68,6 +68,7 @@ sed -i -e "s!USRLOCALINCLUDE = .*'!USRLOCALINCLUDE = '/usr/local/include'!" SCon
 sed -i -e "s!USRINCLUDE = .*!USRINCLUDE = '%{_includedir}'!" SConstruct
 sed -i -e "s!USRLIB = .*'!USRLIB = '%{usrlibdir}'!" SConstruct
 sed -i -e "s!MANTIDLIB = .*'!MANTIDLIB = '%{mantidlibdir}'!" SConstruct
+sed -i -e "s!MANTIDPLUGINS = .*'!MANTIDPLUGINS = '%{mantidpluginsdir}'!" SConstruct
 
 %build
 cd Code/Mantid
@@ -92,9 +93,20 @@ mkdir -p $RPM_BUILD_ROOT/%{mantidinstrumentdir}
 mkdir -p $RPM_BUILD_ROOT/%{mantidincludesdir}
 mkdir -p $RPM_BUILD_ROOT/etc/ld.so.conf.d
 mkdir -p $RPM_BUILD_ROOT/etc/profile.d
-install -m755 Code/Mantid/Bin/Shared/*.so $RPM_BUILD_ROOT/%{mantidlibdir}
+install -m755 Code/qtiplot/MantidQt/lib/libMantidQtAPI.so $RPM_BUILD_ROOT/%{mantidlibdir}
+install -m755 Code/qtiplot/MantidQt/lib/libMantidQtCustomDialogs.so $RPM_BUILD_ROOT/%{mantidpluginsdir}
+install -m755 Code/qtiplot/MantidQt/lib/libMantidQtCustomInterfaces.so $RPM_BUILD_ROOT/%{mantidpluginsdir}
 install -m755 Code/Mantid/Bin/Plugins/*.so $RPM_BUILD_ROOT/%{mantidpluginsdir}
-install -m755 Code/qtiplot/MantidQt/lib/*.so $RPM_BUILD_ROOT/%{mantidlibdir}
+for i in Code/Mantid/Bin/Shared/*.so; do
+    case `basename $i` in
+	libMantidAlgorithms.so | libMantidCurveFitting.so | libMantidDataHandling.so | libMantidDataObjects.so | libMantidNexus.so )
+	    install -m755 $i $RPM_BUILD_ROOT/%{mantidpluginsdir}
+	    ;;
+	*)
+	    install -m755 $i $RPM_BUILD_ROOT/%{mantidlibdir}
+	    ;;
+    esac
+done
 install -m755 Code/qtiplot/qtiplot/qtiplot $RPM_BUILD_ROOT/%{mantidbindir}/MantidPlot
 for i in qtiplotrc.py qtiUtil.py mantidplotrc.py; do
     install -m755 Code/qtiplot/qtiplot/$i $RPM_BUILD_ROOT/%{mantidbindir}/$i
@@ -106,6 +118,7 @@ cp -r Code/Mantid/includes/* $RPM_BUILD_ROOT/%{mantidincludesdir}
 sed -e "s!MANTIDBINDIR!%{mantidbindir}!" < utils/mantid.sh > $RPM_BUILD_ROOT/etc/profile.d/mantid.sh
 sed -e "s!MANTIDBINDIR!%{mantidbindir}!" < utils/mantid.csh > $RPM_BUILD_ROOT/etc/profile.d/mantid.csh
 echo %{mantidlibdir} > $RPM_BUILD_ROOT/etc/ld.so.conf.d/Mantid-%{_arch}.conf
+echo %{mantidpluginsdir} >> $RPM_BUILD_ROOT/etc/ld.so.conf.d/Mantid-%{_arch}.conf
 install -m644 Code/Mantid/Properties/Mantid.properties $RPM_BUILD_ROOT/%{mantidbindir}
 sed -i -e "s!plugins\.directory.*!plugins.directory = %{mantidpluginsdir}!" $RPM_BUILD_ROOT/%{mantidbindir}/Mantid.properties
 sed -i -e "s!pythonscripts\.directory.*!pythonscripts.directory = %{mantidscriptsdir}!" $RPM_BUILD_ROOT/%{mantidbindir}/Mantid.properties
