Returning to the C++ way. Header windef.h defines macros max and min. Compile flag NOMINMAX switches this off. re #508

--- a/Code/Mantid/Algorithms/SConscript
+++ b/Code/Mantid/Algorithms/SConscript
@@ -10,7 +10,7 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 #Import environment
 Import('env')
 myenv = env.Clone()
-myenv.Append(CPPDEFINES=[('IN_MANTID_ALGORITHMS',1)])
+myenv.Append(CPPDEFINES=[('IN_MANTID_ALGORITHMS',1),'NOMINMAX'])
 listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
 
 #BUILD CODE
