--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -118,7 +118,7 @@
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="inc;../API/inc;../Geometry/inc;../Kernel/inc;../DataObjects/inc;../../Third_Party/include"
-				PreprocessorDefinitions="_USE_MATH_DEFINES;WIN32;_WINDOWS;POCO_DLL;WINVER=0x0500;IN_MANTID_ALGORITHMS=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE;GSL_DLL"
+				PreprocessorDefinitions="_USE_MATH_DEFINES;WIN32;_WINDOWS;POCO_DLL;WINVER=0x0500;IN_MANTID_ALGORITHMS=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE;GSL_DLL;NOMINMAX"
 				RuntimeLibrary="2"
 				OpenMP="true"
 				DisableSpecificWarnings="4996"
@@ -270,6 +270,10 @@
 			</File>
 			<File
 				RelativePath=".\src\LOQScriptInput.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MaskBins.cpp"
 				>
 			</File>
 			<File
@@ -556,6 +560,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\LOQScriptInput.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\MaskBins.h"
 				>
 			</File>
 			<File
