--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -202,6 +202,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FileValidator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FilterChannel.cpp"
 				>
 			</File>
