Output from isValid is now written to the log at debug level  re #409

--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -270,6 +270,10 @@
 				RelativePath=".\test\WorkspaceSingleValueTest.h"
 				>
 			</File>
+			<File
+				RelativePath=".\test\WorkspaceValidatorsTest.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
