--- a/Code/Mantid/Nexus/Nexus.vcproj
+++ b/Code/Mantid/Nexus/Nexus.vcproj
@@ -174,6 +174,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadISISNexus.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadMuonLog.cpp"
 				>
 			</File>
@@ -221,6 +225,10 @@
 			>
 			<File
 				RelativePath=".\inc\MantidNexus\LoadInstrumentFromNexus.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidNexus\LoadISISNexus.h"
 				>
 			</File>
 			<File
