Added log reading to LoadISISNexus. re #542

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -241,6 +241,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LogParser.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\MatrixWorkspace.cpp"
 				>
 			</File>
@@ -428,6 +432,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAPI\LocatedDataValue.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\LogParser.h"
 				>
 			</File>
 			<File
