LoadNexus runs LoadISISNexus as a sub-algorithm. LoadISISNexus populates the instrument parameter map. re #542.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -57,7 +57,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib ws2_32.lib muparser.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib ws2_32.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32"
 				GenerateDebugInformation="true"
@@ -134,7 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib ws2_32.lib muparser.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib ws2_32.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../release;../../Third_Party/lib/win32"
 				OptimizeReferences="2"
@@ -294,10 +294,6 @@
 			</File>
 			<File
 				RelativePath=".\src\LoadRaw\vms_convert.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\XMLlogfile.cpp"
 				>
 			</File>
 		</Filter>
@@ -480,14 +476,6 @@
 			</File>
 			<File
 				RelativePath=".\src\LoadRaw\vms_convert.h"
-				>
-			</File>
-			<File
-				RelativePath=".\inc\MantidDataHandling\XMLlogfile.h"
-				>
-			</File>
-			<File
-				RelativePath=".\test\XMLlogfileTest.h"
 				>
 			</File>
 		</Filter>
