--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -39,7 +39,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../../Third_Party/include"
+				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../../Third_Party/include;../../Third_Party/include/muParser"
 				PreprocessorDefinitions="IN_MANTID_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="3"
 				WarningLevel="3"
@@ -57,7 +57,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib ws2_32.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib ws2_32.lib muparser_d.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32"
 				GenerateDebugInformation="true"
@@ -117,7 +117,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../../Third_Party/include;C:\python25\include"
+				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../../Third_Party/include;C:\python25\include;../../Third_Party/include/muParser"
 				PreprocessorDefinitions="_WIN32;IN_MANTID_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				WarningLevel="3"
@@ -134,7 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib ws2_32.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib ws2_32.lib muparser.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../release;../../Third_Party/lib/win32"
 				OptimizeReferences="2"
@@ -298,6 +298,10 @@
 			</File>
 			<File
 				RelativePath=".\src\WorkspaceTracer.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\XMLlogfile.cpp"
 				>
 			</File>
 		</Filter>
@@ -528,6 +532,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAPI\WorkspaceValidators.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\XMLlogfile.h"
 				>
 			</File>
 		</Filter>
