There are still some problems from the change to property::isDefault() and PropertyManager::setValue.  This check in repairs the tests that were failing.  There is documentation for more properties of algorithms. references #593 and #410

--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -235,6 +235,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\MandatoryValidator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Property.cpp"
 				>
 			</File>
