--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -435,6 +435,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\MaskDetectorsInShapeTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidDataHandling\MoveInstrumentComponent.h"
 				>
 			</File>
