--- a/Code/Mantid/Nexus/Nexus.vcproj
+++ b/Code/Mantid/Nexus/Nexus.vcproj
@@ -202,6 +202,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\NexusClasses.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\NexusFileIO.cpp"
 				>
 			</File>
@@ -269,6 +273,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidNexus\MuonNexusReader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidNexus\NexusClasses.h"
 				>
 			</File>
 			<File
