When finding dead detectors it is now possible to use just some of the spectrum, e.g. to ignore an initial large pulse of neutrons to refs #597

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -285,6 +285,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\WorkspaceGroup.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\WorkspaceHistory.cpp"
 				>
 			</File>
@@ -500,6 +504,10 @@
 			</File>
 			<File
 				RelativePath=".\test\WorkspaceFactoryTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\WorkspaceGroup.h"
 				>
 			</File>
 			<File
