Added test for Lorentzian fitting function. Found mistake in this function, hence apologize to anyone who may have tried to use this function prior to this commit. Also, improved code doc further for CurveFitting functions in general. Refs #563.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -256,6 +256,10 @@
 				RelativePath=".\inc\MantidCurveFitting\Lorentzian1D.h"
 				>
 			</File>
+			<File
+				RelativePath=".\test\Lorentzian1DTest.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
