--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -271,6 +271,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\GetDetectorOffsets.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LOQScriptInput.cpp"
 				>
 			</File>
@@ -566,6 +570,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\GeneralisedSecondDifference.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\GetDetectorOffsets.h"
 				>
 			</File>
 			<File
