Add Windows function to take account of reserved but unused memory when deciding whether to use a managed workspace. Re #644.

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -18,6 +18,8 @@ pythonscripts.directory = ../../PythonAPI/scripts
 # with a smaller LowerMemoryLimit.
 # 
 ManagedWorkspace.LowerMemoryLimit = 90
+# Setting this to 1 will disable managed workspaces completely - use with care!
+ManagedWorkspace.AlwaysInMemory = 0
 ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = ../temp
 
