Changed LoadRaw to LoadRaw2 in a couple of the unit tests. Refs #564.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -315,6 +315,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\AlignDetectorsTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRaw\byte_rel_comp.h"
 				>
 			</File>
