I think I'm the last one to submit my Doxygen fixes and this fixes all the warning assigned to me. Is there anything left? Re #100

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -251,6 +251,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ExtractSingleSpectrum.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FindDeadDetectors.cpp"
 				>
 			</File>
@@ -542,6 +546,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\ExponentialCorrection.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\ExtractSingleSpectrum.h"
 				>
 			</File>
 			<File
