re #710  Algorithm Parameters renamed

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -419,6 +419,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\LoadRaw3Test.h"
+				>
+			</File>
+			<File
 				RelativePath=".\test\LoadRawTest.h"
 				>
 			</File>
